// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildKanbanPdf — snapshoty skrajnych przypadków (długie opisy / szerokości) > snapshot: 2 grupy × duży opis — sprawdza zachowanie page-breaków przy wieloliniowych wierszach 1`] = `
{
  "marginBottom": 30,
  "marginLeft": 40,
  "marginTop": 40,
  "pageHeight": 595,
  "pageWidth": 842,
  "pages": [
    {
      "firstUsedY": 74,
      "lastUsedY": 93,
      "page": 1,
      "sectionsEnding": 0,
      "sectionsStarting": 1,
      "trailingWhitespace": 472,
    },
    {
      "firstUsedY": null,
      "lastUsedY": null,
      "page": 2,
      "sectionsEnding": 0,
      "sectionsStarting": 0,
      "trailingWhitespace": 525,
    },
    {
      "firstUsedY": 515,
      "lastUsedY": 515,
      "page": 3,
      "sectionsEnding": 1,
      "sectionsStarting": 0,
      "trailingWhitespace": 50,
    },
    {
      "firstUsedY": 40,
      "lastUsedY": 59,
      "page": 4,
      "sectionsEnding": 0,
      "sectionsStarting": 1,
      "trailingWhitespace": 506,
    },
    {
      "firstUsedY": null,
      "lastUsedY": null,
      "page": 5,
      "sectionsEnding": 0,
      "sectionsStarting": 0,
      "trailingWhitespace": 525,
    },
    {
      "firstUsedY": 362,
      "lastUsedY": 362,
      "page": 6,
      "sectionsEnding": 1,
      "sectionsStarting": 0,
      "trailingWhitespace": 204,
    },
  ],
  "sections": [
    {
      "gapBeforeHeader": null,
      "groupIndex": 0,
      "groupLabel": "Grupa-A",
      "headerBottom": 93,
      "headerHeight": 19,
      "headerTop": 74,
      "indexOnPage": 0,
      "page": 1,
      "sectionHeightOnStartPage": 491,
      "startsNewPage": true,
      "tableEndPage": 3,
      "tableFinalY": 515,
      "tableHeightFirstPage": 472,
      "tablePageSpan": 3,
      "tableStartY": 93,
      "taskCount": 8,
    },
    {
      "gapBeforeHeader": null,
      "groupIndex": 1,
      "groupLabel": "Grupa-B",
      "headerBottom": 59,
      "headerHeight": 19,
      "headerTop": 40,
      "indexOnPage": 0,
      "page": 4,
      "sectionHeightOnStartPage": 525,
      "startsNewPage": true,
      "tableEndPage": 6,
      "tableFinalY": 362,
      "tableHeightFirstPage": 506,
      "tablePageSpan": 3,
      "tableStartY": 59,
      "taskCount": 8,
    },
  ],
  "spacing": {
    "headerToTable": 8,
    "tableToNextHeader": 18,
  },
  "totalPages": 6,
  "totals": {
    "avgTrailingWhitespace": 381,
    "sectionsCount": 2,
    "totalGapBeforeHeader": 0,
    "totalHeaderHeight": 38,
    "totalTableHeightOnStartPage": 979,
  },
}
`;

exports[`buildKanbanPdf — snapshoty skrajnych przypadków (długie opisy / szerokości) > snapshot: bardzo długie opisy (5 paragrafów × 6 zadań) — wieloliniowe wiersze 1`] = `
{
  "marginBottom": 30,
  "marginLeft": 40,
  "marginTop": 40,
  "pageHeight": 595,
  "pageWidth": 842,
  "pages": [
    {
      "firstUsedY": 74,
      "lastUsedY": 93,
      "page": 1,
      "sectionsEnding": 0,
      "sectionsStarting": 1,
      "trailingWhitespace": 472,
    },
    {
      "firstUsedY": null,
      "lastUsedY": null,
      "page": 2,
      "sectionsEnding": 0,
      "sectionsStarting": 0,
      "trailingWhitespace": 525,
    },
    {
      "firstUsedY": 435,
      "lastUsedY": 435,
      "page": 3,
      "sectionsEnding": 1,
      "sectionsStarting": 0,
      "trailingWhitespace": 130,
    },
  ],
  "sections": [
    {
      "gapBeforeHeader": null,
      "groupIndex": 0,
      "groupLabel": "Long-Desc",
      "headerBottom": 93,
      "headerHeight": 19,
      "headerTop": 74,
      "indexOnPage": 0,
      "page": 1,
      "sectionHeightOnStartPage": 491,
      "startsNewPage": true,
      "tableEndPage": 3,
      "tableFinalY": 435,
      "tableHeightFirstPage": 472,
      "tablePageSpan": 3,
      "tableStartY": 93,
      "taskCount": 6,
    },
  ],
  "spacing": {
    "headerToTable": 8,
    "tableToNextHeader": 18,
  },
  "totalPages": 3,
  "totals": {
    "avgTrailingWhitespace": 376,
    "sectionsCount": 1,
    "totalGapBeforeHeader": 0,
    "totalHeaderHeight": 19,
    "totalTableHeightOnStartPage": 472,
  },
}
`;

exports[`buildKanbanPdf — snapshoty skrajnych przypadków (długie opisy / szerokości) > snapshot: bardzo wąskie kolumny + długi opis — agresywne zawijanie linii 1`] = `
{
  "marginBottom": 30,
  "marginLeft": 40,
  "marginTop": 40,
  "pageHeight": 595,
  "pageWidth": 842,
  "pages": [
    {
      "firstUsedY": 74,
      "lastUsedY": 93,
      "page": 1,
      "sectionsEnding": 0,
      "sectionsStarting": 1,
      "trailingWhitespace": 472,
    },
    {
      "firstUsedY": null,
      "lastUsedY": null,
      "page": 2,
      "sectionsEnding": 0,
      "sectionsStarting": 0,
      "trailingWhitespace": 525,
    },
    {
      "firstUsedY": null,
      "lastUsedY": null,
      "page": 3,
      "sectionsEnding": 0,
      "sectionsStarting": 0,
      "trailingWhitespace": 525,
    },
    {
      "firstUsedY": null,
      "lastUsedY": null,
      "page": 4,
      "sectionsEnding": 0,
      "sectionsStarting": 0,
      "trailingWhitespace": 525,
    },
    {
      "firstUsedY": null,
      "lastUsedY": null,
      "page": 5,
      "sectionsEnding": 0,
      "sectionsStarting": 0,
      "trailingWhitespace": 525,
    },
    {
      "firstUsedY": null,
      "lastUsedY": null,
      "page": 6,
      "sectionsEnding": 0,
      "sectionsStarting": 0,
      "trailingWhitespace": 525,
    },
    {
      "firstUsedY": null,
      "lastUsedY": null,
      "page": 7,
      "sectionsEnding": 0,
      "sectionsStarting": 0,
      "trailingWhitespace": 525,
    },
    {
      "firstUsedY": null,
      "lastUsedY": null,
      "page": 8,
      "sectionsEnding": 0,
      "sectionsStarting": 0,
      "trailingWhitespace": 525,
    },
    {
      "firstUsedY": null,
      "lastUsedY": null,
      "page": 9,
      "sectionsEnding": 0,
      "sectionsStarting": 0,
      "trailingWhitespace": 525,
    },
    {
      "firstUsedY": 328,
      "lastUsedY": 328,
      "page": 10,
      "sectionsEnding": 1,
      "sectionsStarting": 0,
      "trailingWhitespace": 237,
    },
  ],
  "sections": [
    {
      "gapBeforeHeader": null,
      "groupIndex": 0,
      "groupLabel": "Narrow",
      "headerBottom": 93,
      "headerHeight": 19,
      "headerTop": 74,
      "indexOnPage": 0,
      "page": 1,
      "sectionHeightOnStartPage": 491,
      "startsNewPage": true,
      "tableEndPage": 10,
      "tableFinalY": 328,
      "tableHeightFirstPage": 472,
      "tablePageSpan": 10,
      "tableStartY": 93,
      "taskCount": 5,
    },
  ],
  "spacing": {
    "headerToTable": 8,
    "tableToNextHeader": 18,
  },
  "totalPages": 10,
  "totals": {
    "avgTrailingWhitespace": 491,
    "sectionsCount": 1,
    "totalGapBeforeHeader": 0,
    "totalHeaderHeight": 19,
    "totalTableHeightOnStartPage": 472,
  },
}
`;

exports[`buildKanbanPdf — snapshoty skrajnych przypadków (długie opisy / szerokości) > snapshot: ekstremalnie długi pojedynczy opis (20 paragrafów × 2 zadania) 1`] = `
{
  "marginBottom": 30,
  "marginLeft": 40,
  "marginTop": 40,
  "pageHeight": 595,
  "pageWidth": 842,
  "pages": [
    {
      "firstUsedY": 74,
      "lastUsedY": 93,
      "page": 1,
      "sectionsEnding": 0,
      "sectionsStarting": 1,
      "trailingWhitespace": 472,
    },
    {
      "firstUsedY": null,
      "lastUsedY": null,
      "page": 2,
      "sectionsEnding": 0,
      "sectionsStarting": 0,
      "trailingWhitespace": 525,
    },
    {
      "firstUsedY": 530,
      "lastUsedY": 530,
      "page": 3,
      "sectionsEnding": 1,
      "sectionsStarting": 0,
      "trailingWhitespace": 35,
    },
  ],
  "sections": [
    {
      "gapBeforeHeader": null,
      "groupIndex": 0,
      "groupLabel": "Mega-Desc",
      "headerBottom": 93,
      "headerHeight": 19,
      "headerTop": 74,
      "indexOnPage": 0,
      "page": 1,
      "sectionHeightOnStartPage": 491,
      "startsNewPage": true,
      "tableEndPage": 3,
      "tableFinalY": 530,
      "tableHeightFirstPage": 472,
      "tablePageSpan": 3,
      "tableStartY": 93,
      "taskCount": 2,
    },
  ],
  "spacing": {
    "headerToTable": 8,
    "tableToNextHeader": 18,
  },
  "totalPages": 3,
  "totals": {
    "avgTrailingWhitespace": 344,
    "sectionsCount": 1,
    "totalGapBeforeHeader": 0,
    "totalHeaderHeight": 19,
    "totalTableHeightOnStartPage": 472,
  },
}
`;

exports[`buildKanbanPdf — snapshoty skrajnych przypadków (długie opisy / szerokości) > snapshot: ekstremalnie szeroka kolumna opis (pdfWidth=1200pt > strony) — autoTable musi przyciąć 1`] = `
{
  "marginBottom": 30,
  "marginLeft": 40,
  "marginTop": 40,
  "pageHeight": 595,
  "pageWidth": 842,
  "pages": [
    {
      "firstUsedY": 74,
      "lastUsedY": 206,
      "page": 1,
      "sectionsEnding": 1,
      "sectionsStarting": 1,
      "trailingWhitespace": 359,
    },
  ],
  "sections": [
    {
      "gapBeforeHeader": null,
      "groupIndex": 0,
      "groupLabel": "Overwide",
      "headerBottom": 93,
      "headerHeight": 19,
      "headerTop": 74,
      "indexOnPage": 0,
      "page": 1,
      "sectionHeightOnStartPage": 132,
      "startsNewPage": true,
      "tableEndPage": 1,
      "tableFinalY": 206,
      "tableHeightFirstPage": 113,
      "tablePageSpan": 1,
      "tableStartY": 93,
      "taskCount": 4,
    },
  ],
  "spacing": {
    "headerToTable": 8,
    "tableToNextHeader": 18,
  },
  "totalPages": 1,
  "totals": {
    "avgTrailingWhitespace": 359,
    "sectionsCount": 1,
    "totalGapBeforeHeader": 0,
    "totalHeaderHeight": 19,
    "totalTableHeightOnStartPage": 113,
  },
}
`;

exports[`buildKanbanPdf — snapshoty skrajnych przypadków (długie opisy / szerokości) > snapshot: groupBy='none' + pojedyncze zadanie z gigantycznym opisem (50 paragrafów) — przeciąga tabelę przez wiele stron 1`] = `
{
  "marginBottom": 30,
  "marginLeft": 40,
  "marginTop": 40,
  "pageHeight": 595,
  "pageWidth": 842,
  "pages": [
    {
      "firstUsedY": 74,
      "lastUsedY": 74,
      "page": 1,
      "sectionsEnding": 0,
      "sectionsStarting": 1,
      "trailingWhitespace": 491,
    },
    {
      "firstUsedY": null,
      "lastUsedY": null,
      "page": 2,
      "sectionsEnding": 0,
      "sectionsStarting": 0,
      "trailingWhitespace": 525,
    },
    {
      "firstUsedY": null,
      "lastUsedY": null,
      "page": 3,
      "sectionsEnding": 0,
      "sectionsStarting": 0,
      "trailingWhitespace": 525,
    },
    {
      "firstUsedY": 365,
      "lastUsedY": 365,
      "page": 4,
      "sectionsEnding": 1,
      "sectionsStarting": 0,
      "trailingWhitespace": 200,
    },
  ],
  "sections": [
    {
      "gapBeforeHeader": null,
      "groupIndex": 0,
      "groupLabel": "wszystkie",
      "headerBottom": 74,
      "headerHeight": 0,
      "headerTop": 74,
      "indexOnPage": 0,
      "page": 1,
      "sectionHeightOnStartPage": 491,
      "startsNewPage": true,
      "tableEndPage": 4,
      "tableFinalY": 365,
      "tableHeightFirstPage": 491,
      "tablePageSpan": 4,
      "tableStartY": 74,
      "taskCount": 1,
    },
  ],
  "spacing": {
    "headerToTable": 8,
    "tableToNextHeader": 18,
  },
  "totalPages": 4,
  "totals": {
    "avgTrailingWhitespace": 436,
    "sectionsCount": 1,
    "totalGapBeforeHeader": 0,
    "totalHeaderHeight": 0,
    "totalTableHeightOnStartPage": 491,
  },
}
`;

exports[`buildKanbanPdf — snapshoty skrajnych przypadków (długie opisy / szerokości) > snapshot: mieszanka krótkich i bardzo długich opisów w jednej grupie 1`] = `
{
  "marginBottom": 30,
  "marginLeft": 40,
  "marginTop": 40,
  "pageHeight": 595,
  "pageWidth": 842,
  "pages": [
    {
      "firstUsedY": 74,
      "lastUsedY": 93,
      "page": 1,
      "sectionsEnding": 0,
      "sectionsStarting": 1,
      "trailingWhitespace": 472,
    },
    {
      "firstUsedY": null,
      "lastUsedY": null,
      "page": 2,
      "sectionsEnding": 0,
      "sectionsStarting": 0,
      "trailingWhitespace": 525,
    },
    {
      "firstUsedY": 273,
      "lastUsedY": 273,
      "page": 3,
      "sectionsEnding": 1,
      "sectionsStarting": 0,
      "trailingWhitespace": 292,
    },
  ],
  "sections": [
    {
      "gapBeforeHeader": null,
      "groupIndex": 0,
      "groupLabel": "Mixed-Desc",
      "headerBottom": 93,
      "headerHeight": 19,
      "headerTop": 74,
      "indexOnPage": 0,
      "page": 1,
      "sectionHeightOnStartPage": 491,
      "startsNewPage": true,
      "tableEndPage": 3,
      "tableFinalY": 273,
      "tableHeightFirstPage": 472,
      "tablePageSpan": 3,
      "tableStartY": 93,
      "taskCount": 6,
    },
  ],
  "spacing": {
    "headerToTable": 8,
    "tableToNextHeader": 18,
  },
  "totalPages": 3,
  "totals": {
    "avgTrailingWhitespace": 430,
    "sectionsCount": 1,
    "totalGapBeforeHeader": 0,
    "totalHeaderHeight": 19,
    "totalTableHeightOnStartPage": 472,
  },
}
`;

exports[`buildKanbanPdf — snapshoty skrajnych przypadków (długie opisy / szerokości) > snapshot: opisy z polskimi znakami / emoji / wymuszonymi nowymi liniami 1`] = `
{
  "marginBottom": 30,
  "marginLeft": 40,
  "marginTop": 40,
  "pageHeight": 595,
  "pageWidth": 842,
  "pages": [
    {
      "firstUsedY": 74,
      "lastUsedY": 362,
      "page": 1,
      "sectionsEnding": 1,
      "sectionsStarting": 1,
      "trailingWhitespace": 203,
    },
  ],
  "sections": [
    {
      "gapBeforeHeader": null,
      "groupIndex": 0,
      "groupLabel": "Unicode",
      "headerBottom": 93,
      "headerHeight": 19,
      "headerTop": 74,
      "indexOnPage": 0,
      "page": 1,
      "sectionHeightOnStartPage": 288,
      "startsNewPage": true,
      "tableEndPage": 1,
      "tableFinalY": 362,
      "tableHeightFirstPage": 269,
      "tablePageSpan": 1,
      "tableStartY": 93,
      "taskCount": 4,
    },
  ],
  "spacing": {
    "headerToTable": 8,
    "tableToNextHeader": 18,
  },
  "totalPages": 1,
  "totals": {
    "avgTrailingWhitespace": 203,
    "sectionsCount": 1,
    "totalGapBeforeHeader": 0,
    "totalHeaderHeight": 19,
    "totalTableHeightOnStartPage": 269,
  },
}
`;
